# ChangeLog for www-client/google-chrome
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.310 2013/08/20 23:40:18 floppym Exp $

*google-chrome-29.0.1547.57_p217859 (20 Aug 2013)
*google-chrome-30.0.1599.14_alpha1 (20 Aug 2013)

  20 Aug 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-29.0.1547.57_p217859.ebuild,
  +google-chrome-30.0.1599.14_alpha1.ebuild,
  -google-chrome-28.0.1500.95_p213514.ebuild,
  -google-chrome-30.0.1599.10_alpha1.ebuild:
  Automated update.

*google-chrome-29.0.1547.57_beta217859 (17 Aug 2013)

  17 Aug 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-29.0.1547.57_beta217859.ebuild,
  -google-chrome-29.0.1547.55_beta217443.ebuild:
  Automated update.

*google-chrome-30.0.1599.10_alpha1 (16 Aug 2013)

  16 Aug 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-30.0.1599.10_alpha1.ebuild,
  -google-chrome-30.0.1599.0_alpha1.ebuild:
  Automated update.

*google-chrome-29.0.1547.55_beta217443 (15 Aug 2013)

  15 Aug 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-29.0.1547.55_beta217443.ebuild,
  -google-chrome-29.0.1547.49_beta216092.ebuild:
  Automated update.

*google-chrome-30.0.1599.0_alpha1 (14 Aug 2013)

  14 Aug 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-30.0.1599.0_alpha1.ebuild,
  -google-chrome-30.0.1588.0_alpha1.ebuild:
  Automated update.

*google-chrome-30.0.1588.0_alpha1 (08 Aug 2013)
*google-chrome-29.0.1547.49_beta216092 (08 Aug 2013)

  08 Aug 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-29.0.1547.49_beta216092.ebuild,
  +google-chrome-30.0.1588.0_alpha1.ebuild,
  -google-chrome-29.0.1547.41_beta214871.ebuild,
  -google-chrome-30.0.1581.2_alpha1.ebuild:
  Automated update.

  06 Aug 2013; Ulrich Müller <ulm@gentoo.org>
  google-chrome-28.0.1500.95_p213514.ebuild,
  google-chrome-29.0.1547.41_beta214871.ebuild,
  google-chrome-30.0.1581.2_alpha1.ebuild: