@@ -9,6 +9,6 @@ LICENSE=google-chrome
 RDEPEND=app-arch/bzip2 app-misc/ca-certificates dev-libs/atk dev-libs/expat dev-libs/glib:2 dev-libs/libgcrypt dev-libs/nspr dev-libs/nss gnome-base/gconf:2 media-libs/alsa-lib media-libs/fontconfig media-libs/freetype net-print/cups sys-apps/dbus >=sys-devel/gcc-4.4.0[cxx] x11-libs/cairo x11-libs/gdk-pixbuf x11-libs/gtk+:2 >=x11-libs/libX11-1.5.0 x11-libs/libXcomposite x11-libs/libXext x11-libs/libXfixes x11-libs/libXrandr x11-libs/libXrender x11-libs/libXScrnSaver x11-libs/pango x11-misc/xdg-utils !www-client/google-chrome:0 !www-client/google-chrome:stable !www-client/google-chrome:unstable
 RESTRICT=bindist mirror strip
 SLOT=beta
-SRC_URI=amd64? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-beta/google-chrome-beta_29.0.1547.57-r217859_amd64.deb ) x86? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-beta/google-chrome-beta_29.0.1547.57-r217859_i386.deb )
+SRC_URI=amd64? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-beta/google-chrome-beta_30.0.1599.14-1_amd64.deb ) x86? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-beta/google-chrome-beta_30.0.1599.14-1_i386.deb )
 _eclasses_=chromium	cb805b418b1d27c585f6b2a3321d19ee	eutils	63afaaed8aa819fdcb814c7cd39495a2	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	794d2847b4af390a1e020924876c8297	linux-info	dd8fdcccc30f117673b4cba4ed4f74a7	multilib	892e597faee02a5b94eb02ab512e7622	pax-utils	2424f959506320f5196de8f79fa05297	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	unpacker	658a981a81fd7cb0767315a541bab01d	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=167f6700014dafd73f3abac9d4556789
+_md5_=f9a5d3a708abac509ccdde61737f1a51
