@@ -1,21 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-beta_29.0.1547.57-r217859_amd64.deb 44202314 SHA256 6f61a96e711a896e19f92bd5fb84c30f9f0d043cf55d96f235152f63f3fc3ee9 SHA512 20c1e5a6070ca8f4b84736b5326c60c3f67a56c93200298b8771983dd5d91413e72f9987701be8c8d68a919386c483b618e7add71bf334fc30d44bf50be85f4e WHIRLPOOL 2a2adaa28b99e0db75ff0eb9afcee47652efa90dadf02c26eb2a010845155b052bc0c02996cc2772b6032f5c1baf19661c5eced25d535c8e95d583a01cdd3219
-DIST google-chrome-beta_29.0.1547.57-r217859_i386.deb 41836008 SHA256 8f7a5a229ec70a6407c5ba29ee1067d3a8df6e2047e4ce76df9fcd61af432013 SHA512 dd701281fed017a8fb8c1c74c5ca9637ee3f57102164ead819a1b505e34e50af2e042609b6be8cb5fae06ebab8ef5bdefb624b603a45ecbfb98d5fc0dbb74489 WHIRLPOOL b1aefe7e312ff790d7a47284004419dd16ec9f6481b0a6f3f100b7e14f42c30e0a2591d1b69afd1ac1279fb567bb1edb245d58f21de20c03a0e337eed4ce26fe
+DIST google-chrome-beta_30.0.1599.14-1_amd64.deb 44458542 SHA256 24a6c8e10d88a1163d329e08f393b1d0db29aaa388ffa03398f9f80de4de1fa2 SHA512 713de90b1078b61fdc1f7e3850c6b6d7f737541fa0dd6f9400b4af3b4c40fa52d91a58803f2093b168bc7317b40b467a6f29ed4fb23858ab9809aa4cef8c2b09 WHIRLPOOL 6ffd112d7b5c6b68a8ce6df9259ec2fa02ad7676e7fbf1969188b1fe0f2a57c4ab2fd9a08e9eff82f7b6712e027f97a6d2dd58d7f25b8b8a47b8daea0bca1ba3
+DIST google-chrome-beta_30.0.1599.14-1_i386.deb 42230558 SHA256 359a2f7da007102647135b722e3fdca4faf6d8b11e038a5cbe4259c82302096d SHA512 db339fbbd9a076c2fd8bbcbc2593f1c2a98b68430ce5eafeada46d618c44aa4a8f3cfe26e61b75fd1c993b56aab9a791c607877f120c01910e226be56649f697 WHIRLPOOL f4480fdd9e17a7b386f278064c13065f1ceaac0f8a05d281570203f749e9db8638dd61773d642c4ed109719070b3f3a24e5d30d7a35d18d23a4c97544cb01cc7
 DIST google-chrome-stable_29.0.1547.57-r217859_amd64.deb 44178550 SHA256 cf846123ae6089334b9e01760d9e716bf12e03a916a8ac74a56becf6acb6e1aa SHA512 7086045b450a27639f306b9d7dc6f8c197778dfc0f81cc37e8e4bab672f652912f00a8af22d96951605ff8c12c96ce16122e29e74daba28b1b22b6e9d8fd086d WHIRLPOOL 85d305bdf02feda1c25bc9fc7a12e2973dfe8c7a9e9461493c3d7508fff34a52e1b7b7e0d0d1b5c9b657d810754c85d08a73f1b0e61f601070afde54ac790a52
 DIST google-chrome-stable_29.0.1547.57-r217859_i386.deb 41816682 SHA256 d4ee118cb5a7a1bd7961ebecad7e3c51e63626bcb2353c2bb668a909dd3ceb14 SHA512 1d8c35539e554e574c491e8c49f9b928843424b7de281408344667549b8876048fbe15ba029dd404c84eb358765891934344bb8db1539918d0207de7650580cc WHIRLPOOL f957db3fe71510e1b9723346cd4c92b37b8b3d528af1bbcdae15f97e4ecc716d16de59e8126de53abbd6122e11d2e2b6f360eda6f37586e67230e2a2438ce8ad
 DIST google-chrome-unstable_30.0.1599.14-1_amd64.deb 44475132 SHA256 721dc02da89bfc4401f12f101dd12144d4bd09359bde5767032f7f9b1a66752d SHA512 761f1810bdffaada876872ed08ab17bd5fb4b072be866e5310232d90675c8a4c4c117fea4f75ce2c84f9ed9eb546e27acdac2404344fe19b456bffdf72546e29 WHIRLPOOL c773aa134ec2caeeb7c6f2bb582ee3d0af5df63da38edaa8486b7021efc8079e0a1c38320806d9e35d9db814d4cd71187dd1e141588030a485c8ff8a3a9dd8d9
 DIST google-chrome-unstable_30.0.1599.14-1_i386.deb 42214854 SHA256 125f805bd9140a795d98d6780ee57d5061eaa2e1ee9034e1f7e70abf1af30599 SHA512 c5d6b058f441c67401358dc6ec4d7c4f09fe9e40cdd518bd027d523bee31c17a792e1b4f4e149d6bc4123d4a5febf2c4f936ecf716e2f75b0718386c0f757b37 WHIRLPOOL 0bcb2d6605cad1d8997a9c8aa13ee2b89d6c59ab2b279681e9334096795067cbe2eedb45806ce12cc83dc23c2dd33e56579c56777ae41715fca52512319e82b4
-EBUILD google-chrome-29.0.1547.57_beta217859.ebuild 3574 SHA256 b1bfd3e41ed4abb34803d2bc0f064deebe844bd00e95588102584daa71d3433f SHA512 adaf5b745286bb0e23dd831bff9830e03ffae62da692e59de668aef5bc635329cf35cfde11da68c71fb39fd8e4a38179a0279636784fbae36c2b4fb2dae415d9 WHIRLPOOL 1224402c57892a6d6f3972ae3d344b36c025dab8b0b83f73ac438253a3af964d22d18c94efbca36688d1d968baa4a99f548b73ac5f08c7fb65c35693a0858dc0
 EBUILD google-chrome-29.0.1547.57_p217859.ebuild 3563 SHA256 6cbe0fa50de6e59a787a7b2a491e7728800a1cc313549cc9eeacb54d2b9351ab SHA512 068e49789df996b94310479cd292ed80105a4ef76b989fefd25080059e368a179aec0bf7a171ff418b885b1f78173e6eb786d1355bb32b617b99608b8c8ffe6d WHIRLPOOL a4ce4d2758224043bc5a78b28a28ea48267870b9699dbebaa691ff4c6993ba02467d620454f4101fe1470fddb551701f05aaa7170ae6cdf9c86b250357e0cebb
 EBUILD google-chrome-30.0.1599.14_alpha1.ebuild 3567 SHA256 ad0a927d88ea4d675f497b4c07aac68fdda85f1c7beb92b3fd2c37fc95aaca30 SHA512 9803becf8772c2dd0e37cb14efa45ea9c903841ef67115b14b75f25a9c89244f9cc7a37ccce003321d6ce77d55b7b82f7c9391f60e681f380c35a31f9e95d171 WHIRLPOOL 99cbfaad823c14c1b5e2be20be9e24973413be09c49db265ef24d9716eed824ac1240e28a23ad0daeee13bfd9df4d3c3d80cfaa2db3afab8c942f794c30506da
-MISC ChangeLog 75575 SHA256 dc8b3d50c18eef84d7214f5669b1d5ac333cb61bbbb01717647bd18eedae0bdd SHA512 c60bd85fa207632c460b30f0d15149b86032c9a7f73e6b951e19e6fd741c3cc21d01da43970ccf3877f4973b2bd35efb8367050dca554e260691354b7829b0fc WHIRLPOOL 15a3e164b7167f3f36480aa931b2485bf6df5d83a9835c21f3504e1ecc4fe020c309070aaec53a5f3fcb972031e8f2574fab23240a67914df9a7dcb93d524368
+EBUILD google-chrome-30.0.1599.14_beta1.ebuild 3566 SHA256 a055580c75034329769fa6cca462d7653bc03667ee65bc7f2b4de8db8696b388 SHA512 78b680f915f430c62f927350ee0d3dee70eaa46f64cc9aa93abcefedd6ecd9ff0c7677dfbafcefd08012ecc5f2f6ce72ca5d83356c7d36169a20c4ce7d9e00f7 WHIRLPOOL 956f59520fe1c74caffba72ff191a3e885e08209a57c0a9fa5653e890171b7d6815193628938e0996738932ec8a589e46b892adab71edb31b65e09d1ee4e66a8
+MISC ChangeLog 75775 SHA256 5cef138b375d2591a44d6e316296b459c918a8ddf5e6f0a348a5d83b3934fa67 SHA512 4a857569893c655e8e351f170c00891071076053f5e12962159daf5169daf4f150190bab112130d736428bce1b362ed2feb86f8134dd0058d5a32c4cd9d941d9 WHIRLPOOL 8b94047c1e86d5f0ce8267d32bdbe971951c0ae6e3913916b709838ed022b1d375597500a9eba8ce0dfeab2fb24da9fbdd292fca9ccad71f75cce8582839b0bd
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iF4EAREIAAYFAlIT/mkACgkQC77qH+pIQ6S43AEAhhfSyjh3vjy0Hogxp5WlUxka
-oVGGcg+l7fwnJIOEV8gA/A5iygdwLaWWwJbpc0alnsHr9tRJm18itt+097sizJv6
-=eAaQ
+iF4EAREIAAYFAlIWukkACgkQC77qH+pIQ6RwBwD/Z/6Va5d4FogL5LZU0eo/8Q5S
+tf7BFK44V8LMnm0TpFIBAMBLe8XeBt2psfst3GQqAdx/W7WyhrSt+K4yMwCymLhO
+=M6b/
 -----END PGP SIGNATURE-----
