@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/google-chrome-29.0.1547.57_beta217859.ebuild,v 1.1 2013/08/17 00:21:15 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/google-chrome-30.0.1599.14_beta1.ebuild,v 1.1 2013/08/23 01:26:28 floppym Exp $
 
 EAPI="4"
 
@@ -16,15 +16,15 @@ HOMEPAGE="http://www.google.com/chrome"
 case ${PV} in
 	*_alpha*)
 		SLOT="unstable"
-		MY_PV=${PV/_alpha/-r}
+		MY_PV=${PV/_alpha/-}
 		;;
 	*_beta*)
 		SLOT="beta"
-		MY_PV=${PV/_beta/-r}
+		MY_PV=${PV/_beta/-}
 		;;
 	*_p*)
 		SLOT="stable"
-		MY_PV=${PV/_p/-r}
+		MY_PV=${PV/_p/-}
 		;;
 	*)
 		die "Invalid value for \${PV}: ${PV}"
