@@ -1,22 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-beta_29.0.1547.57-r217859_amd64.deb 44202314 SHA256 6f61a96e711a896e19f92bd5fb84c30f9f0d043cf55d96f235152f63f3fc3ee9 SHA512 20c1e5a6070ca8f4b84736b5326c60c3f67a56c93200298b8771983dd5d91413e72f9987701be8c8d68a919386c483b618e7add71bf334fc30d44bf50be85f4e WHIRLPOOL 2a2adaa28b99e0db75ff0eb9afcee47652efa90dadf02c26eb2a010845155b052bc0c02996cc2772b6032f5c1baf19661c5eced25d535c8e95d583a01cdd3219
-DIST google-chrome-beta_29.0.1547.57-r217859_i386.deb 41836008 SHA256 8f7a5a229ec70a6407c5ba29ee1067d3a8df6e2047e4ce76df9fcd61af432013 SHA512 dd701281fed017a8fb8c1c74c5ca9637ee3f57102164ead819a1b505e34e50af2e042609b6be8cb5fae06ebab8ef5bdefb624b603a45ecbfb98d5fc0dbb74489 WHIRLPOOL b1aefe7e312ff790d7a47284004419dd16ec9f6481b0a6f3f100b7e14f42c30e0a2591d1b69afd1ac1279fb567bb1edb245d58f21de20c03a0e337eed4ce26fe
+DIST google-chrome-beta_30.0.1599.14-1_amd64.deb 44458542 SHA256 24a6c8e10d88a1163d329e08f393b1d0db29aaa388ffa03398f9f80de4de1fa2 SHA512 713de90b1078b61fdc1f7e3850c6b6d7f737541fa0dd6f9400b4af3b4c40fa52d91a58803f2093b168bc7317b40b467a6f29ed4fb23858ab9809aa4cef8c2b09 WHIRLPOOL 6ffd112d7b5c6b68a8ce6df9259ec2fa02ad7676e7fbf1969188b1fe0f2a57c4ab2fd9a08e9eff82f7b6712e027f97a6d2dd58d7f25b8b8a47b8daea0bca1ba3
+DIST google-chrome-beta_30.0.1599.14-1_i386.deb 42230558 SHA256 359a2f7da007102647135b722e3fdca4faf6d8b11e038a5cbe4259c82302096d SHA512 db339fbbd9a076c2fd8bbcbc2593f1c2a98b68430ce5eafeada46d618c44aa4a8f3cfe26e61b75fd1c993b56aab9a791c607877f120c01910e226be56649f697 WHIRLPOOL f4480fdd9e17a7b386f278064c13065f1ceaac0f8a05d281570203f749e9db8638dd61773d642c4ed109719070b3f3a24e5d30d7a35d18d23a4c97544cb01cc7
 DIST google-chrome-stable_29.0.1547.57-r217859_amd64.deb 44178550 SHA256 cf846123ae6089334b9e01760d9e716bf12e03a916a8ac74a56becf6acb6e1aa SHA512 7086045b450a27639f306b9d7dc6f8c197778dfc0f81cc37e8e4bab672f652912f00a8af22d96951605ff8c12c96ce16122e29e74daba28b1b22b6e9d8fd086d WHIRLPOOL 85d305bdf02feda1c25bc9fc7a12e2973dfe8c7a9e9461493c3d7508fff34a52e1b7b7e0d0d1b5c9b657d810754c85d08a73f1b0e61f601070afde54ac790a52
 DIST google-chrome-stable_29.0.1547.57-r217859_i386.deb 41816682 SHA256 d4ee118cb5a7a1bd7961ebecad7e3c51e63626bcb2353c2bb668a909dd3ceb14 SHA512 1d8c35539e554e574c491e8c49f9b928843424b7de281408344667549b8876048fbe15ba029dd404c84eb358765891934344bb8db1539918d0207de7650580cc WHIRLPOOL f957db3fe71510e1b9723346cd4c92b37b8b3d528af1bbcdae15f97e4ecc716d16de59e8126de53abbd6122e11d2e2b6f360eda6f37586e67230e2a2438ce8ad
 DIST google-chrome-unstable_30.0.1599.14-1_amd64.deb 44475132 SHA256 721dc02da89bfc4401f12f101dd12144d4bd09359bde5767032f7f9b1a66752d SHA512 761f1810bdffaada876872ed08ab17bd5fb4b072be866e5310232d90675c8a4c4c117fea4f75ce2c84f9ed9eb546e27acdac2404344fe19b456bffdf72546e29 WHIRLPOOL c773aa134ec2caeeb7c6f2bb582ee3d0af5df63da38edaa8486b7021efc8079e0a1c38320806d9e35d9db814d4cd71187dd1e141588030a485c8ff8a3a9dd8d9
 DIST google-chrome-unstable_30.0.1599.14-1_i386.deb 42214854 SHA256 125f805bd9140a795d98d6780ee57d5061eaa2e1ee9034e1f7e70abf1af30599 SHA512 c5d6b058f441c67401358dc6ec4d7c4f09fe9e40cdd518bd027d523bee31c17a792e1b4f4e149d6bc4123d4a5febf2c4f936ecf716e2f75b0718386c0f757b37 WHIRLPOOL 0bcb2d6605cad1d8997a9c8aa13ee2b89d6c59ab2b279681e9334096795067cbe2eedb45806ce12cc83dc23c2dd33e56579c56777ae41715fca52512319e82b4
-EBUILD chrome-binary-plugins-29.0.1547.57_beta217859.ebuild 2202 SHA256 6384119d98e3e104550c3c5d2746d86f77428504d79086614e3a3c4303a763ce SHA512 dadc5009d60342d1bc66f561bdd84a43abf940307d180cde55b0a1509645ed1b3d83c49cb80b3e71af89bb2b50dcf5cb557c15e8fcdd120805e24bef06f08c14 WHIRLPOOL f54fe1dfdf3f0d41fae01807b1359e0bf78a578c57850bdc9b2ac5246fc7eaf997ce09cdf63a69d2fcd71332308e56c60c16ad2b8405b95ef8b5d2630324d9d4
 EBUILD chrome-binary-plugins-29.0.1547.57_p217859.ebuild 2199 SHA256 47e929a5a5ce083d4a4c1508903fd5731a9df91154ed65eeb50bc2e3718f3928 SHA512 4b4ca950cd64c25f300650ffd9366a1182324928a0170c695bd2c4d8cddaf755196e9251df36dc17ff22f55339cd4f6597844fdf93691e6844414c6b981573e0 WHIRLPOOL 922632a48e84efaa8ce57a71f00074dcbe91b896eaa520ee515473aeb1bd24665cfda887f88096036fd43c2d59cf0dd66534a84fb47d1ae3a86c6a0bc6646e59
 EBUILD chrome-binary-plugins-30.0.1599.14_alpha1.ebuild 2195 SHA256 f669d49bc82115d2d52bea9344be7c1a0699fae70b1cd43bc043fc4522147772 SHA512 1b6375715b98579ffde247ad8ed94bb5faf31106091cc3bd8295fd800947e83e42caad17f83c942108bc89ae6bbf727c128919ccfe14a3e0376517e4d39135c8 WHIRLPOOL df2a97b7c00eb6268f35ea4b9b1bf4a8e092d33be3aa9ce59eb856bafeaf977614c12cebda4a5b1904a3a6eaa8e78ffc422dc3473b9407402cefbe3197bc2850
+EBUILD chrome-binary-plugins-30.0.1599.14_beta1.ebuild 2194 SHA256 01c2127257f370a1b1d2559d042081976065755d056a45433dc9c1f4b5be6f8a SHA512 d55cf94cbd884a0540e5848a4067d2c3aeb683dd7e5a4871352c36042d8821ad8cbc4246f56db0466fb1beac45affd6ba32ea631c83bb9adc3376898fd178bd7 WHIRLPOOL aee6b95d4c4bf109ad15d8e4f443b89aa14f1e0a55d8dda403fcd5b23a702c6af49a1e54fa4d0cc74d32760020bf841049c4aae6efdd5ba38362e54d9828bb94
 EBUILD chrome-binary-plugins-9999.ebuild 2205 SHA256 920e1a72f226cac07081b5256c9378f2a27375daa0e6ec61ad22c6e4f0af65b5 SHA512 f4824f454cedc1bbbabf97251ef546487e29a344ef3076d4f246065e6c98105824794fe1fee5235b88e18f76e505b009c3317db295807f3423bdd9734e34e953 WHIRLPOOL b27174ca5799abb78c8ff3b0309e7cba87f7b2ca4ba501e34523874772811e1ca21cff44228a5369c26d77fa645ebf114a598f6fc032b20df241dea08f7924c5
-MISC ChangeLog 13676 SHA256 5cbc2c72ebdab5b0ad839a832808a4ce02dcc12a462142190c5002ed2e0b48f0 SHA512 be331421e9d9be23f27b98438fa15a7da2913ab1b352a9a0cd3cb5ce1bc127952b22ed103f20a5f9f8e2af8e5ac34ae4bc2d4640761594023a57df7a50185137 WHIRLPOOL e47f9a8ad9b79ffdbd527e6a03db58ba1378dec0d49ced6358e90e01c94e0f6cac97f395c0c5792ddb196848b4755f4b43746d0b4ba5e2e1fc367934c9f7fedb
+MISC ChangeLog 13900 SHA256 c43be48093879596b0b59d9504cb63f108bea95565d530a036a917deaec86ffd SHA512 75f2443ab88d11f66f4113e8a5309b5a8045275acbcc844d95cc2b053dd57ba5594744b2950ec759bf04e00d4349532d9ddaa5ac479821b59af993c80bbb1458 WHIRLPOOL 805eaadb2ffeae925bd5c6f62cb7292dc279d226e63d5e72967d71b81f0b00f2f943ea8a5f2248f6be51d760c9b13a3762c0b93ace3ccb253712e1cbd98b7cfc
 MISC metadata.xml 409 SHA256 d40d69b26dd8aefe8da69937e54e0a885d6867e28e42c5dcbe193233a84ee533 SHA512 bdf4f11c173af9f80b3475f8ea32ba966806d1e0e694bd55a6a4960717e3f3ffff69eabb060ae5ee4d3b39cdf18eeeff45c9d431c3b6ce8ae5c271c7a409aa71 WHIRLPOOL 7319320d648a8aae0eec726a8ab489bb71fe5f93dfb40847e97344a02be85a09ba931d5aeee8fdb13d899de3c90746c75a59897287c715dd771dfbe8863b803b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iF4EAREIAAYFAlIT/pEACgkQC77qH+pIQ6SSiQD9GSgNaL9O3g/WxCoEdG5JWUp9
-16jcYNz4UD6aOBfibDkBALb6A8Y75ZllTjKepcoWNTDFy98oew7A9OUpEeU/+Pg7
-=H9Qe
+iF4EAREIAAYFAlIWuqsACgkQC77qH+pIQ6TubAD+Ky9zoYOZtIY5IgDe/ejUHJCu
+2RG/hFO2fBNPznIQY1AA/0m1Tr4T7P0PTrVdkU5mvY4cBQB4CygJy2xPJg3wM6x6
+=uS8r
 -----END PGP SIGNATURE-----
