@@ -1,6 +1,13 @@
 # ChangeLog for www-plugins/chrome-binary-plugins
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.49 2013/08/20 23:41:04 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.50 2013/08/23 01:28:09 floppym Exp $
+
+*chrome-binary-plugins-30.0.1599.14_beta1 (23 Aug 2013)
+
+  23 Aug 2013; Mike Gilbert <floppym@gentoo.org>
+  +chrome-binary-plugins-30.0.1599.14_beta1.ebuild,
+  -chrome-binary-plugins-29.0.1547.57_beta217859.ebuild:
+  Bump.
 
 *chrome-binary-plugins-29.0.1547.57_p217859 (20 Aug 2013)
 *chrome-binary-plugins-30.0.1599.14_alpha1 (20 Aug 2013)
